--- a/gettext-runtime/po/sk.po
+++ b/gettext-runtime/po/sk.po
@@ -1,14 +1,15 @@
 # Slovak translations for GNU gettext-runtime package.
-# Copyright (C) 1999, 2001, 2002, 2003, 2004, 2007, 2008 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2001, 2002, 2003, 2004, 2007, 2008, 2010 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gettext package.
 # Štefan Ondrejička <ondrej@idata.sk>, 1999.
-# Marcel Telka <marcel@telka.sk>, 2001, 2002, 2003, 2004, 2007, 2008.
+# Marcel Telka <marcel@telka.sk>, 2001, 2002, 2003, 2004, 2007, 2008, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext-runtime 0.16.2-pre5\n"
+"Project-Id-Version: GNU gettext-runtime 0.18\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2010-05-09 13:18+0200\n"
-"PO-Revision-Date: 2008-02-21 00:12+0100\n"
+"PO-Revision-Date: 2010-05-10 14:03+0200\n"
 "Last-Translator: Marcel Telka <marcel@telka.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "Language: sk\n"
@@ -26,60 +27,60 @@ msgid "Unknown system error"
 msgstr "Neznáma systémová chyba"
 
 #: gnulib-lib/getopt.c:527 gnulib-lib/getopt.c:543
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%s' is ambiguous\n"
-msgstr "%s: voľba `%s' nie je jednoznačná\n"
+msgstr "%s: voľba '%s' nie je jednoznačná\n"
 
 #: gnulib-lib/getopt.c:576 gnulib-lib/getopt.c:580
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: voľba `--%s' nepovoľuje parameter\n"
+msgstr "%s: voľba '--%s' nepovoľuje parameter\n"
 
 #: gnulib-lib/getopt.c:589 gnulib-lib/getopt.c:594
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: voľba `%c%s' nepovoľuje parameter\n"
+msgstr "%s: voľba '%c%s' nepovoľuje parameter\n"
 
 #: gnulib-lib/getopt.c:637 gnulib-lib/getopt.c:656
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: voľba `%s' vyžaduje parameter\n"
+msgstr "%s: voľba '--%s' vyžaduje parameter\n"
 
 #: gnulib-lib/getopt.c:694 gnulib-lib/getopt.c:697
-#, fuzzy, c-format
+#, c-format
 msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: neznáma voľba `--%s'\n"
+msgstr "%s: neznáma voľba '--%s'\n"
 
 #: gnulib-lib/getopt.c:705 gnulib-lib/getopt.c:708
-#, fuzzy, c-format
+#, c-format
 msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: neznáma voľba `%c%s'\n"
+msgstr "%s: neznáma voľba '%c%s'\n"
 
 #: gnulib-lib/getopt.c:757 gnulib-lib/getopt.c:760
-#, fuzzy, c-format
+#, c-format
 msgid "%s: invalid option -- '%c'\n"
-msgstr "%s: neplatná voľba -- %c\n"
+msgstr "%s: neplatná voľba -- '%c'\n"
 
 #: gnulib-lib/getopt.c:810 gnulib-lib/getopt.c:827 gnulib-lib/getopt.c:1035
 #: gnulib-lib/getopt.c:1053
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option requires an argument -- '%c'\n"
-msgstr "%s: voľba vyžaduje parameter -- %c\n"
+msgstr "%s: voľba vyžaduje parameter -- '%c'\n"
 
 #: gnulib-lib/getopt.c:883 gnulib-lib/getopt.c:899
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: voľba `-W %s' nie je jednoznačná\n"
+msgstr "%s: voľba '-W %s' nie je jednoznačná\n"
 
 #: gnulib-lib/getopt.c:923 gnulib-lib/getopt.c:941
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: voľba `-W %s' nedovoľuje použitie parametra\n"
+msgstr "%s: voľba '-W %s' nepovoľuje parameter\n"
 
 #: gnulib-lib/getopt.c:962 gnulib-lib/getopt.c:980
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: voľba `%s' vyžaduje parameter\n"
+msgstr "%s: voľba '-W %s' vyžaduje parameter\n"
 
 #: gnulib-lib/xmalloc.c:37
 #, c-format
@@ -317,6 +318,3 @@ msgstr ""
 "TEXTDOMAIN. Ak sa katalóg správ nenachádza v obvyklom adresári, iné umiestnenie\n"
 "môže byť určené obsahom premennej prostredia TEXTDOMAINDIR.\n"
 "Štandardný adresár, v ktorom sa budú hľadať katalógy: %s\n"
-
-#~ msgid "%s: illegal option -- %c\n"
-#~ msgstr "%s: neprípustná voľba -- %c\n"
