--- a/gettext-runtime/po/ja.po
+++ b/gettext-runtime/po/ja.po
@@ -1,13 +1,14 @@
 # Translation of `gettext-runtime' messages to Japanese.
-# Copyright (C) 1999, 2002, 2003, 2006, 2007 Free Software Foundation, Inc.
-# Masahito Yamaga <ma@yama-ga.com>, 2007.
+# Copyright (C) 1999, 2002, 2003, 2006, 2007, 2010 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gettext package.
+# Masahito Yamaga <ma@yama-ga.com>, 2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext-runtime 0.16.2-pre5\n"
+"Project-Id-Version: GNU gettext-runtime 0.18\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
 "POT-Creation-Date: 2010-05-09 13:18+0200\n"
-"PO-Revision-Date: 2007-10-16 10:29+0900\n"
+"PO-Revision-Date: 2010-05-10 19:02+0900\n"
 "Last-Translator: Masahito Yamaga <ma@yama-ga.com>\n"
 "Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
 "Language: ja\n"
@@ -25,60 +26,60 @@ msgid "Unknown system error"
 msgstr "未知のシステムエラー"
 
 #: gnulib-lib/getopt.c:527 gnulib-lib/getopt.c:543
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%s' is ambiguous\n"
-msgstr "%s: オプション `%s' は曖昧です\n"
+msgstr "%s: オプション '%s' は曖昧です\n"
 
 #: gnulib-lib/getopt.c:576 gnulib-lib/getopt.c:580
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: オプション `--%s' には引数はありません\n"
+msgstr "%s: オプション '--%s' に引数はありません\n"
 
 #: gnulib-lib/getopt.c:589 gnulib-lib/getopt.c:594
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: オプション `%c%s' には引数はありません\n"
+msgstr "%s: オプション '%c%s' に引数はありません\n"
 
 #: gnulib-lib/getopt.c:637 gnulib-lib/getopt.c:656
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: オプション `%s' には引数が必要です\n"
+msgstr "%s: オプション '--%s' には引数が必要です\n"
 
 #: gnulib-lib/getopt.c:694 gnulib-lib/getopt.c:697
-#, fuzzy, c-format
+#, c-format
 msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: オプション `--%s' は認識されません\n"
+msgstr "%s: オプション '--%s' は不可\n"
 
 #: gnulib-lib/getopt.c:705 gnulib-lib/getopt.c:708
-#, fuzzy, c-format
+#, c-format
 msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: オプション `%c%s' は認識されません\n"
+msgstr "%s: オプション '%c%s' は不可\n"
 
 #: gnulib-lib/getopt.c:757 gnulib-lib/getopt.c:760
-#, fuzzy, c-format
+#, c-format
 msgid "%s: invalid option -- '%c'\n"
-msgstr "%s: 無効なオプション -- %c\n"
+msgstr "%s: 無効なオプション -- '%c'\n"
 
 #: gnulib-lib/getopt.c:810 gnulib-lib/getopt.c:827 gnulib-lib/getopt.c:1035
 #: gnulib-lib/getopt.c:1053
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option requires an argument -- '%c'\n"
-msgstr "%s: 引数が必要なオプション -- %c\n"
+msgstr "%s: 引数が必要なオプション -- '%c'\n"
 
 #: gnulib-lib/getopt.c:883 gnulib-lib/getopt.c:899
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: オプション `-W %s' は曖昧です\n"
+msgstr "%s: オプション '-W %s' は曖昧です\n"
 
 #: gnulib-lib/getopt.c:923 gnulib-lib/getopt.c:941
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: オプション `-W %s' には引数はありません\n"
+msgstr "%s: オプション '-W %s' に引数はありません\n"
 
 #: gnulib-lib/getopt.c:962 gnulib-lib/getopt.c:980
-#, fuzzy, c-format
+#, c-format
 msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: オプション `%s' には引数が必要です\n"
+msgstr "%s: オプション '-W %s' には引数が必要です\n"
 
 #: gnulib-lib/xmalloc.c:37
 #, c-format
