--- a/gettext-tools/gnulib-tests/ChangeLog
+++ b/gettext-tools/gnulib-tests/ChangeLog
@@ -1,3 +1,8 @@
+2010-05-24  Bruno Haible  <bruno@clisp.org>
+
+	Fix compilation failure on systems without <libintl.h>.
+	* Makefile.am (AM_CPPFLAGS): Add -I../intl.
+
 2010-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.18 released.
